--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c80e80",
+   "id": "3d2b48a0",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc3f42dc",
+   "id": "84078380",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "baf15cbd",
+   "id": "dfe1982b",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "96b16fdf",
+   "id": "dc63f07c",
    "metadata": {},
    "outputs": [
     {
@@ -131,35 +131,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d0cceae6",
+   "execution_count": 29,
+   "id": "971888dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter random word: book\n",
-      "please enter another word pin\n",
-      "Here is your entries orderpinbook\n"
+      "please enter random word: apple\n",
+      "please enter another word berry\n",
+      " Here is your entries order appleberry\n"
      ]
     }
    ],
    "source": [
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
-    "if word1 <= word2:\n",
+    "if word1 > word2:\n",
     "    print('Here is your entries order'+ word2 + word1)\n",
     "else:\n",
-    "    print(' Here is your entries order ' + word1 + word2 )\n",
+    "    print(' Here is your entries order ' + word1 + ' , ' word2 )\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "8631381d",
+   "execution_count": 28,
+   "id": "ae970f1b",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
      "evalue": "unterminated string literal (detected at line 4) (2430639385.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} and {word1}'')\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} and {word1}'')\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eaf60b1",
+   "id": "e38bff98",
    "metadata": {},
    "outputs": [],
    "source": []
