--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f325bc93",
+   "id": "b89c43ed",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c016d803",
+   "id": "01602f16",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95aed1ae",
+   "id": "951ab096",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aa2eb33",
+   "id": "0321b9d4",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "282b7b61",
+   "id": "2552e9c2",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3960c8bc",
+   "id": "ecdad349",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c8fa5d4",
+   "id": "4a08df71",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e22d3f2",
+   "id": "05d14563",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ae25d85b",
+   "id": "a2064142",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "43d0f807",
+   "id": "db6107ee",
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "19d06452",
+   "execution_count": 11,
+   "id": "dbf458f9",
    "metadata": {
     "scrolled": false
    },
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first wordcisco\n",
-      "Enter second wordalfa\n",
+      "Enter first wordalfa\n",
+      "Enter second wordcisco\n",
       "Word alfa comes first\n"
      ]
     }
@@ -194,14 +194,14 @@
     "word1 = input('Enter first word')\n",
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
-    "    print(f'Word {word2} comes first')\n",
+    "    print(f'Word {word2} comes second')\n",
     "else:\n",
     "    print(f'Word {word1} comes first')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96984b9f",
+   "id": "6b785df2",
    "metadata": {},
    "source": [
     "#test"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36f45e48",
+   "id": "4c09779f",
    "metadata": {},
    "outputs": [],
    "source": []
