--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c14bb828",
+   "id": "954f9513",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3edc3ade",
+   "id": "5ad70a21",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fed5cc04",
+   "id": "1a754703",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "10290c48",
+   "id": "b6bdbeb5",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb363f5e",
+   "id": "56f255d0",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fcc6fb1f",
+   "id": "f755a1da",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ba6f1016",
+   "id": "97d2934f",
    "metadata": {},
    "outputs": [
     {
@@ -146,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "33d52a81",
+   "execution_count": 17,
+   "id": "e2032ea5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first word: bear\n",
-      "Enter the second word: apple\n",
-      "apple comes before bear.\n"
+      "Enter the first word: chicken\n",
+      "Enter the second word: egg\n",
+      "chicken comes before egg.\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62c4590",
+   "id": "3da33bdd",
    "metadata": {},
    "outputs": [],
    "source": []
