--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fff2fa7e",
+   "id": "f8277c5e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43fed15b",
+   "id": "d06554e9",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7830fd27",
+   "id": "b3b71e55",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bb7bf82d",
+   "id": "2b962edd",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c4c7daf6",
+   "id": "174eda2b",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef85f44",
+   "id": "8bb886fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bb8e087a",
+   "id": "95d5f44c",
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +144,13 @@
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
     "if name1 > name2:\n",
-    "    print (f'())"
+    "    print (f'{name2}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4345deab",
+   "id": "6641343a",
    "metadata": {},
    "outputs": [],
    "source": []
