--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e87a8ec5",
+   "id": "bc73209e",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2036831f",
+   "id": "d223c602",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "892004bc",
+   "id": "4ebc3961",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "967c174d",
+   "id": "6dce508b",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e75ccbb2",
+   "id": "7aa52432",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "580ace04",
+   "id": "99af95af",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8cbb61a1",
+   "id": "3b454e05",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5dfd51ba",
+   "id": "ab1c2b52",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "610387b6",
+   "id": "76578e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "03b9e5d5",
+   "id": "1567ddda",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "def58829",
+   "id": "a4cbf789",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0a5cfedd",
+   "id": "18a2ad01",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c3159b7",
+   "id": "a07e9b8b",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "eee3f435",
+   "id": "bd6b754c",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1415ac8d",
+   "id": "264c1ec4",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c1048ae9",
+   "id": "42bf8d67",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "99786598",
+   "id": "20d551eb",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5ec3a3cd",
+   "id": "30211915",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2830193e",
+   "id": "a953a239",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0684e515",
+   "id": "feeb9562",
    "metadata": {},
    "outputs": [
     {
@@ -395,16 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "4c8a0881",
+   "execution_count": 40,
+   "id": "c26f47e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3935930634.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[38], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    print( word1, 'comes before' word2)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: egg\n",
+      "Enter second word: chicken\n",
+      "egg comes before chicken\n"
      ]
     }
    ],
@@ -412,15 +413,15 @@
     "word1 = input('Enter first word: ')\n",
     "word2 = input('Enter second word: ')\n",
     "if word1 > word2 :\n",
-    "    print('first word comes first')\n",
+    "    print(word1, 'comes before', word2) # print(f'{word1} comes before{word2}')\n",
     "else:\n",
-    "    print( word1, 'comes before', word2)"
+    "    print( word2, 'comes before', word1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8e537d",
+   "id": "6161e593",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -428,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45d96dd",
+   "id": "9cadb6b6",
    "metadata": {},
    "outputs": [],
    "source": []
