--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2b48a0",
+   "id": "a0b9da77",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "84078380",
+   "id": "885185fa",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dfe1982b",
+   "id": "f9e46e37",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dc63f07c",
+   "id": "2a6d20dd",
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "971888dd",
+   "execution_count": 31,
+   "id": "976c76ed",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
      "text": [
       "please enter random word: apple\n",
       "please enter another word berry\n",
-      " Here is your entries order appleberry\n"
+      " Here is your entries order apple , berry\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
     "if word1 > word2:\n",
     "    print('Here is your entries order'+ word2 + word1)\n",
     "else:\n",
-    "    print(' Here is your entries order ' + word1 + ' , ' word2 )\n",
+    "    print(' Here is your entries order ' + word1 + ' , ' + word2 )\n",
     "    \n",
     "    "
    ]
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ae970f1b",
+   "id": "ff8fd3b9",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
     "if word1 <= word2:\n",
-    "    print(f'Here is your entries order {word2} and {word1}'')\n",
+    "    print(f'Here is your entries order {word2} and {word1}')\n",
     "else:\n",
     "    print(' Here is your entries order ' + word1 + word2 )"
    ]
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38bff98",
+   "id": "8b1ba851",
    "metadata": {},
    "outputs": [],
    "source": []
