--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b89c43ed",
+   "id": "c22ebb20",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01602f16",
+   "id": "7bd53c24",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "951ab096",
+   "id": "6508b9ad",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0321b9d4",
+   "id": "36e1fec0",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2552e9c2",
+   "id": "4d59c07f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecdad349",
+   "id": "8faae78a",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a08df71",
+   "id": "0aeeb8ca",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05d14563",
+   "id": "7fdd2232",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a2064142",
+   "id": "6e8ea33f",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "db6107ee",
+   "id": "f6d780c9",
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dbf458f9",
+   "execution_count": 13,
+   "id": "310e7e54",
    "metadata": {
     "scrolled": false
    },
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first wordalfa\n",
-      "Enter second wordcisco\n",
+      "Enter first wordcisco\n",
+      "Enter second wordalfa\n",
       "Word alfa comes first\n"
      ]
     }
@@ -194,14 +194,14 @@
     "word1 = input('Enter first word')\n",
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
-    "    print(f'Word {word2} comes second')\n",
+    "    print(f'Word {word2} comes first')\n",
     "else:\n",
     "    print(f'Word {word1} comes first')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b785df2",
+   "id": "13d2d862",
    "metadata": {},
    "source": [
     "#test"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c09779f",
+   "id": "2f85b7f1",
    "metadata": {},
    "outputs": [],
    "source": []
