--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "45d559ce",
+   "id": "53b4e632",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c9d9917e",
+   "id": "f0378592",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3d894a92",
+   "id": "5a7d82d9",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dd6d24a2",
+   "id": "6ddab874",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7fb1bff1",
+   "id": "264212ae",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9d532ea3",
+   "id": "daf163dd",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "37975036",
+   "id": "6dd5d94e",
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +152,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "5c7b1ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: Egg\n",
+      "Enter second word: chicken\n",
+      "Egg comes before chicken\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first < second:    # if first comes before second in the dictionary...\n",
+    "    print(f'{first} comes before {second}')\n",
+    "else:\n",
+    "    print(f'{second} come')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0eae54dd",
+   "id": "98a35bdb",
    "metadata": {},
    "outputs": [],
    "source": []
