--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -264,7 +264,9 @@
     "word_1 = input('Enter the word_1: ')\n",
     "word_2 = input('Enter the word_2: ')\n",
     "if 'word_1' < 'word_2':\n",
-    "    print(f'{word1} cpo)\n"
+    "    print(f'{word_1} comes before {word_2}')\n",
+    "else:\n",
+    "    print(f'{word_2} comes before {word_1}')"
    ]
   },
   {
