--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f8277c5e",
+   "id": "9b2eeca9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d06554e9",
+   "id": "26fee484",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b3b71e55",
+   "id": "1270a1c3",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2b962edd",
+   "id": "296991a9",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "174eda2b",
+   "id": "f49df588",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb886fa",
+   "id": "2f682b6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "95d5f44c",
+   "id": "fb01e04a",
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +144,14 @@
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
     "if name1 > name2:\n",
-    "    print (f'{name2}"
+    "    print (f'{name2} comes before {name1})\n",
+    "           else: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6641343a",
+   "id": "099627a5",
    "metadata": {},
    "outputs": [],
    "source": []
